--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -34,5 +34,8 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://www.jitpack.io' }
+        maven {
+			      url "http://repo.baichuan-android.taobao.com/content/groups/BaichuanRepositories/"
+        }
     }
 }
