--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -128,7 +128,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.reactnativealibc"
+        applicationId "com.kafu.fenxiang"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -183,6 +183,14 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
+    implementation 'com.tencent.bugly:crashreport:latest.release'
+    implementation 'com.tencent.bugly:nativecrashreport:latest.release'
+
+    // 电商基础组件
+    implementation 'com.alibaba.sdk.android:AlibcTradeCommon:4.0.0.16@aar'
+    implementation 'com.alibaba.sdk.android:AlibcTradeBiz:4.0.0.16@aar'
+    implementation 'com.alibaba.sdk.android:nb_trade:4.0.0.16@aar'
+    implementation 'com.alibaba:fastjson:1.2.41@jar'
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
