--- a/example/android/app/.project
+++ b/example/android/app/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>reactnativealibc</name>
-	<comment>Project android_ created by Buildship.</comment>
+	<name>app</name>
+	<comment>Project app created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
@@ -22,7 +22,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1614787409704</id>
+			<id>1614787409699</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
