--- a/android/build.gradle
+++ b/android/build.gradle
@@ -146,8 +146,8 @@ dependencies {
   implementation 'com.taobao.android:utdid4all:1.5.2'
   implementation 'com.alibaba.mtl:app-monitor-sdk:2.6.4.5_for_bc'
   // 电商基础组件
-  implementation 'com.alibaba.sdk.android:AlibcTradeCommon:latest.release@aar'
-  implementation 'com.alibaba.sdk.android:AlibcTradeBiz:latest.release@aar'
-  implementation 'com.alibaba.sdk.android:nb_trade:latest.release@aar'
+  implementation 'com.alibaba.sdk.android:AlibcTradeCommon:4.0.0.16@aar'
+  implementation 'com.alibaba.sdk.android:AlibcTradeBiz:4.0.0.16@aar'
+  implementation 'com.alibaba.sdk.android:nb_trade:4.0.0.16@aar'
   implementation 'com.alibaba:fastjson:1.2.41@jar'
 }
