--- a/example/android/gradle.properties
+++ b/example/android/gradle.properties
@@ -21,4 +21,4 @@ org.gradle.daemon=true
 android.useAndroidX=true
 android.enableJetifier=true
 FLIPPER_VERSION=0.54.0
-android.useDeprecatedNdk=true
+#android.useDeprecatedNdk=true
