--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -139,30 +139,47 @@ android {
             reset()
             enable enableSeparateBuildPerCPUArchitecture
             universalApk false  // If true, also generate a universal APK
-            include "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
+            include "armeabi-v7a", "arm64-v8a"
         }
     }
     signingConfigs {
         debug {
-            storeFile file('debug.keystore')
+            storeFile file('../keystores/android.keystore')
             storePassword 'android'
-            keyAlias 'androiddebugkey'
+            keyAlias 'android.keystore'
+            keyPassword 'android'
+        }
+        release {
+            storeFile file('../keystores/android.keystore')
+            storePassword 'android'
+            keyAlias 'android.keystore'
             keyPassword 'android'
         }
     }
     buildTypes {
-        debug {
-            signingConfig signingConfigs.debug
-        }
-        release {
-            // Caution! In production, you need to generate your own keystore file.
-            // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
-            minifyEnabled enableProguardInReleaseBuilds
-            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
-        }
+//        debug {
+//            signingConfig signingConfigs.debug
+//        }
+//        release {
+//            // Caution! In production, you need to generate your own keystore file.
+//            // see https://reactnative.dev/docs/signed-apk-android.
+//            signingConfig signingConfigs.debug
+//            minifyEnabled enableProguardInReleaseBuilds
+//            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+//        }
+      release {
+        signingConfig signingConfigs.debug
+        minifyEnabled true
+        proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+      }
+
+      debug {
+        signingConfig signingConfigs.debug
+        minifyEnabled true
+        proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+      }
     }
-    // applicationVariants are e.g. debug, release
+//     applicationVariants are e.g. debug, release
     applicationVariants.all { variant ->
         variant.outputs.each { output ->
             // For each separate APK per architecture, set a unique version code as described here:
@@ -176,6 +193,11 @@ android {
 
         }
     }
+  android {
+    lintOptions {
+      abortOnError false
+    }
+  }
 }
 
 dependencies {
@@ -183,8 +205,27 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
-    implementation 'com.tencent.bugly:crashreport:latest.release'
-    implementation 'com.tencent.bugly:nativecrashreport:latest.release'
+  //登陆
+  implementation 'com.ali.auth.sdk:alibabauth_core:2.0.0.11@aar'
+  implementation 'com.ali.auth.sdk:alibabauth_ui:2.0.0.11@aar'
+  implementation 'com.ali.auth.sdk:alibabauth_ext:2.0.0.11@aar'
+  //安全组件
+  implementation 'com.taobao.android:securityguardaar3:5.4.171@aar'
+  implementation 'com.taobao.android:securitybodyaar3:5.4.99@aar'
+  implementation 'com.taobao.android:avmpaar3:5.4.36@aar'
+  implementation 'com.taobao.android:sgmiddletieraar3:5.4.9@aar'
+  //Mtop
+  implementation 'com.taobao.android:mtopsdk_allinone_open:3.1.2.5@jar'
+  //applink
+  implementation 'com.alibaba.sdk.android:alibc_link_partner:4.1.15@aar'
+  //ut
+  implementation 'com.taobao.android:utdid4all:1.5.2'
+  implementation 'com.alibaba.mtl:app-monitor-sdk:2.6.4.5_for_bc'
+  // 电商基础组件
+  implementation 'com.alibaba.sdk.android:AlibcTradeCommon:4.0.0.16@aar'
+  implementation 'com.alibaba.sdk.android:AlibcTradeBiz:4.0.0.16@aar'
+  implementation 'com.alibaba.sdk.android:nb_trade:4.0.0.16@aar'
+  implementation 'com.alibaba:fastjson:1.2.41@jar'
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
