--- a/android/.settings/org.eclipse.buildship.core.prefs
+++ b/android/.settings/org.eclipse.buildship.core.prefs
@@ -1,8 +1,8 @@
 arguments=
 auto.sync=false
 build.scans.enabled=false
-connection.gradle.distribution=GRADLE_DISTRIBUTION(VERSION(6.3))
-connection.project.dir=../example/android
+connection.gradle.distribution=GRADLE_DISTRIBUTION(VERSION(6.8))
+connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
 java.home=C\:/Program Files/AdoptOpenJDK/jdk-11.0.10.9-hotspot
