--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -135,12 +135,12 @@ android {
         versionName "1.0"
     }
     splits {
-        abi {
-            reset()
-            enable enableSeparateBuildPerCPUArchitecture
-            universalApk false  // If true, also generate a universal APK
-            include "armeabi-v7a", "arm64-v8a"
-        }
+      abi {
+        reset()
+        enable enableSeparateBuildPerCPUArchitecture
+        universalApk false  // If true, also generate a universal APK
+        include "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
+      }
     }
     signingConfigs {
         debug {
@@ -157,29 +157,18 @@ android {
         }
     }
     buildTypes {
-//        debug {
-//            signingConfig signingConfigs.debug
-//        }
-//        release {
-//            // Caution! In production, you need to generate your own keystore file.
-//            // see https://reactnative.dev/docs/signed-apk-android.
-//            signingConfig signingConfigs.debug
-//            minifyEnabled enableProguardInReleaseBuilds
-//            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
-//        }
-      release {
-        signingConfig signingConfigs.debug
-        minifyEnabled true
-        proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-      }
-
       debug {
         signingConfig signingConfigs.debug
-        minifyEnabled true
+        minifyEnabled false
+        proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+      }
+      release {
+        signingConfig signingConfigs.debug
+        minifyEnabled false
         proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
       }
     }
-//     applicationVariants are e.g. debug, release
+    //     applicationVariants are e.g. debug, release
     applicationVariants.all { variant ->
         variant.outputs.each { output ->
             // For each separate APK per architecture, set a unique version code as described here:
@@ -193,39 +182,12 @@ android {
 
         }
     }
-  android {
-    lintOptions {
-      abortOnError false
-    }
-  }
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
-
-  //登陆
-  implementation 'com.ali.auth.sdk:alibabauth_core:2.0.0.11@aar'
-  implementation 'com.ali.auth.sdk:alibabauth_ui:2.0.0.11@aar'
-  implementation 'com.ali.auth.sdk:alibabauth_ext:2.0.0.11@aar'
-  //安全组件
-  implementation 'com.taobao.android:securityguardaar3:5.4.171@aar'
-  implementation 'com.taobao.android:securitybodyaar3:5.4.99@aar'
-  implementation 'com.taobao.android:avmpaar3:5.4.36@aar'
-  implementation 'com.taobao.android:sgmiddletieraar3:5.4.9@aar'
-  //Mtop
-  implementation 'com.taobao.android:mtopsdk_allinone_open:3.1.2.5@jar'
-  //applink
-  implementation 'com.alibaba.sdk.android:alibc_link_partner:4.1.15@aar'
-  //ut
-  implementation 'com.taobao.android:utdid4all:1.5.2'
-  implementation 'com.alibaba.mtl:app-monitor-sdk:2.6.4.5_for_bc'
-  // 电商基础组件
-  implementation 'com.alibaba.sdk.android:AlibcTradeCommon:4.0.0.16@aar'
-  implementation 'com.alibaba.sdk.android:AlibcTradeBiz:4.0.0.16@aar'
-  implementation 'com.alibaba.sdk.android:nb_trade:4.0.0.16@aar'
-  implementation 'com.alibaba:fastjson:1.2.41@jar'
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
