--- a/android/build.gradle
+++ b/android/build.gradle
@@ -52,6 +52,9 @@ android {
 }
 
 repositories {
+  maven {
+    url "http://repo.baichuan-android.taobao.com/content/groups/BaichuanRepositories/"
+  }
   mavenCentral()
   jcenter()
   google()
