--- a/android/build.gradle
+++ b/android/build.gradle
@@ -55,6 +55,7 @@ repositories {
   maven {
     url "http://repo.baichuan-android.taobao.com/content/groups/BaichuanRepositories/"
   }
+  flatDir { dirs 'libs' }
   mavenCentral()
   jcenter()
   google()
@@ -129,6 +130,7 @@ def kotlin_version = getExtOrDefault('kotlinVersion')
 
 dependencies {
   // noinspection GradleDynamicVersion
+  implementation fileTree(dir: 'libs', include: ['*.jar','*.aar'])
   api 'com.facebook.react:react-native:+'
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
@@ -137,14 +139,14 @@ dependencies {
   implementation 'com.ali.auth.sdk:alibabauth_ui:2.0.0.11@aar'
   implementation 'com.ali.auth.sdk:alibabauth_ext:2.0.0.11@aar'
   //安全组件
-  implementation 'com.taobao.android:securityguardaar3:5.4.171@aar'
-  implementation 'com.taobao.android:securitybodyaar3:5.4.99@aar'
-  implementation 'com.taobao.android:avmpaar3:5.4.36@aar'
-  implementation 'com.taobao.android:sgmiddletieraar3:5.4.9@aar'
+  // implementation 'com.taobao.android:securityguardaar3:5.4.171@aar'
+  // implementation 'com.taobao.android:securitybodyaar3:5.4.99@aar'
+  // implementation 'com.taobao.android:avmpaar3:5.4.36@aar'
+  // implementation 'com.taobao.android:sgmiddletieraar3:5.4.9@aar'
   //Mtop
-  implementation 'com.taobao.android:mtopsdk_allinone_open:3.1.2.5@jar'
+  // implementation 'com.taobao.android:mtopsdk_allinone_open:3.1.2.5@jar'
   //applink
-  implementation 'com.alibaba.sdk.android:alibc_link_partner:4.1.15@aar'
+  // implementation 'com.alibaba.sdk.android:alibc_link_partner:4.1.15@aar'
   //ut
   implementation 'com.taobao.android:utdid4all:1.5.2'
   implementation 'com.alibaba.mtl:app-monitor-sdk:2.6.4.5_for_bc'
@@ -153,4 +155,16 @@ dependencies {
   implementation 'com.alibaba.sdk.android:AlibcTradeBiz:4.0.0.16@aar'
   implementation 'com.alibaba.sdk.android:nb_trade:4.0.0.16@aar'
   implementation 'com.alibaba:fastjson:1.2.41@jar'
+
+  // 5.x
+  // implementation 'com.alibaba.baichuan.sdk:alibctriver:5.0.0.21@aar'
+  // implementation 'com.alibaba.baichuan.sdk:alibcad:5.0.0.21@aar'
+  // implementation 'com.alibaba.baichuan.sdk:alibcapplink:5.0.0.21@aar'
+  // implementation 'com.alibaba.baichuan.sdk:alibcextend:5.0.0.21@aar'
+  // implementation 'com.alibaba.baichuan.sdk:alibclogin:5.0.0.21@aar'
+  // implementation 'com.alibaba.baichuan.sdk:alibcnbtrade:5.0.0.21@aar'
+  // implementation 'com.alibaba.baichuan.sdk:alibcprotocol:5.0.0.21@aar'
+  // implementation 'com.alibaba.baichuan.sdk:alibctools:5.0.0.21@aar'
+  // implementation 'com.alibaba.baichuan.sdk:alibctradecommon:5.0.0.21@aar'
+  // implementation 'com.alibaba.baichuan.sdk:alibcwebview:5.0.0.21@aar'
 }
