--- a/android/build.gradle
+++ b/android/build.gradle
@@ -135,25 +135,25 @@ dependencies {
   api 'com.facebook.react:react-native:+'
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-  //登陆
-  implementation 'com.ali.auth.sdk:alibabauth_core:2.0.0.11@aar'
-  implementation 'com.ali.auth.sdk:alibabauth_ui:2.0.0.11@aar'
-  implementation 'com.ali.auth.sdk:alibabauth_ext:2.0.0.11@aar'
-  //安全组件
-  implementation 'com.taobao.android:securityguardaar3:5.4.171@aar'
-  implementation 'com.taobao.android:securitybodyaar3:5.4.99@aar'
-  implementation 'com.taobao.android:avmpaar3:5.4.36@aar'
-  implementation 'com.taobao.android:sgmiddletieraar3:5.4.9@aar'
-  //Mtop
-  implementation 'com.taobao.android:mtopsdk_allinone_open:3.1.2.5@jar'
-  //applink
-  implementation 'com.alibaba.sdk.android:alibc_link_partner:4.1.15@aar'
-  //ut
-  implementation 'com.taobao.android:utdid4all:1.5.2'
-  implementation 'com.alibaba.mtl:app-monitor-sdk:2.6.4.5_for_bc'
-  // 电商基础组件
-  implementation 'com.alibaba.sdk.android:AlibcTradeCommon:4.0.0.16@aar'
-  implementation 'com.alibaba.sdk.android:AlibcTradeBiz:4.0.0.16@aar'
-  implementation 'com.alibaba.sdk.android:nb_trade:4.0.0.16@aar'
-  implementation 'com.alibaba:fastjson:1.2.41@jar'
+  // //登陆
+  // implementation 'com.ali.auth.sdk:alibabauth_core:2.0.0.11@aar'
+  // implementation 'com.ali.auth.sdk:alibabauth_ui:2.0.0.11@aar'
+  // implementation 'com.ali.auth.sdk:alibabauth_ext:2.0.0.11@aar'
+  // //安全组件
+  // implementation 'com.taobao.android:securityguardaar3:5.4.171@aar'
+  // implementation 'com.taobao.android:securitybodyaar3:5.4.99@aar'
+  // implementation 'com.taobao.android:avmpaar3:5.4.36@aar'
+  // implementation 'com.taobao.android:sgmiddletieraar3:5.4.9@aar'
+  // //Mtop
+  // implementation 'com.taobao.android:mtopsdk_allinone_open:3.1.2.5@jar'
+  // //applink
+  // implementation 'com.alibaba.sdk.android:alibc_link_partner:4.1.15@aar'
+  // //ut
+  // implementation 'com.taobao.android:utdid4all:1.5.2'
+  // implementation 'com.alibaba.mtl:app-monitor-sdk:2.6.4.5_for_bc'
+  // // 电商基础组件
+  // implementation 'com.alibaba.sdk.android:AlibcTradeCommon:4.0.0.16@aar'
+  // implementation 'com.alibaba.sdk.android:AlibcTradeBiz:4.0.0.16@aar'
+  // implementation 'com.alibaba.sdk.android:nb_trade:4.0.0.16@aar'
+  // implementation 'com.alibaba:fastjson:1.2.41@jar'
 }
